--- a/test_tracker_rest/src/main/resources/application.properties
+++ b/test_tracker_rest/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port = 8190
 security.basic.enabled = false
 management.security.enabled = false
+
+spring.datasource.url: jdbc:mysql://localhost/test_tracker
+spring.datasource.username=testTracker
+spring.datasource.password=testTracker
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
